test/libsolidity/syntaxTests/dataLocations/libraries/library_internal_function_return_parameters_no_data_location.sol
library L {
    function g(uint[]) internal pure {}
}
// ----
// TypeError: (27-33): Location must be specified as either "memory" or "storage" for parameters.